# DocSasa

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
appointments/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_alter_auditlog_options_alter_otp_options.py
docsasa/: asgi.py  settings.py  urls.py  wsgi.py
doctors/: admin.py  models.py  serializers.py  urls.py  views.py
doctors/migrations/: 0001_initial.py  0002_alter_workinghours_options.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/pages/patient/: BookAppointment.jsx  ManageAppointment.jsx
frontend/src/pages/staff/: Dashboard.jsx  Doctors.jsx  Login.jsx
